k3s/infra/network/traefik/05-whoami-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: route

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: whoami
