k3s/infra/network/traefik/06-whoami-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-tls
  namespace: route
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`whoami.vextech.dev`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
     secretName: wildcard.vextech.dev-tls
